spell check and create utils functions

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# codeditr: Implementing Basic Checks on Cause-of-Death Data Based on World Health Organization's CoDEdit Tool <img src='man/figures/logo.png' width='200px' align='right' />
+# codeditr: Implementing Cause-of-Death Data Checks Based on the WHO CoDEdit Tool <img src='man/figures/logo.png' width='200px' align='right' />
 
 <!-- badges: start -->
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
@@ -22,23 +22,23 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/OxfordIHTM/codeditr/branch/main/graph/badge.svg)](https://app.codecov.io/gh/OxfordIHTM/codeditr?branch=main)
 <!-- badges: end -->
 
-The [World Health Organization](https://www.who.int/)'s [CoDEdit electronic tool](https://www.who.int/standards/classifications/classification-of-diseases/services/codedit-tool) is intended to help producers of cause-of-death statistics in strengthening their capacity to perform routine checks on their data. This package ports the original tool built using Microsoft Acess into R so as to leverage the utility and function of the original tool into a usable application program interface that can be used for building more universal tools or for creating programmatic scientific workflows aimed at routine, automated, and large-scale monitoring of cause-of-death data.
+The [World Health Organization](https://www.who.int/)'s [CoDEdit electronic tool](https://www.who.int/standards/classifications/classification-of-diseases/services/codedit-tool) is intended to help producers of cause-of-death statistics in strengthening their capacity to perform routine checks on their data. This package ports the original tool built using Microsoft Access into R so as to leverage the utility and function of the original tool into a usable application program interface that can be used for building more universal tools or for creating programmatic scientific workflows aimed at routine, automated, and large-scale monitoring of cause-of-death data.
 
 ## What does `codeditr` do?
 
-The `codeditr` package provides functions for implementing data quality checks on cause-of-death records. It is built upon the same heuristics and algorithms that the WHO CodEdit v2.0 electronic tool uses to evaluate quality of cause-of-death data produced and used by country level statisticians in charge of mortality reporting.
+The `codeditr` package provides functions for implementing data quality checks on cause-of-death records. It is built upon the same heuristics and algorithms that the WHO CoDEdit v2.0 electronic tool uses to evaluate quality of cause-of-death data produced and used by country level statisticians in charge of mortality reporting.
 
 Through this package, end users will have the ability to programmatically create scientific workflows for research on cause-of-death data and their quality or build more open tools or applications for routine monitoring of cause-of-death data.
 
 ## Installation
 
-`coeditr` is not yet on CRAN.
+`coeditr` is not yet on CRAN but can be installed through the [Oxford IHTM R-universe](https://oxfordihtm.r-universe.dev) with:
 
-You can install the development version of `codeditr` from [GitHub](https://github.com/OxfordIHTM/codeditr) with:
-
-```{r gh-installation1, eval = FALSE}
-if(!require(remotes)) install.packages("remotes")
-remotes::install_github("OxfordIHTM/codeditr")
+```{r install, eval = FALSE}
+install.packages(
+  "codeditr",
+  repos = c("https://oxfordihtm.r-universe.dev", "https://cloud.r-project.org")
+)
 ```
 
 then load `codeditr`
@@ -52,7 +52,7 @@ library(codeditr)
 
 ## Citation
 
-If you find the `codeitr` package useful please cite using the suggested citation provided by a call to the `citation()` function as follows:
+If you find the `codeditr` package useful please cite using the suggested citation provided by a call to the `citation()` function as follows:
 
 ```{r citation}
 citation("codeditr")
